--- a/italian.html
+++ b/italian.html
@@ -43,17 +43,11 @@
   <div class="Laranceto">
     <img class="italian" src="Laranceto.jpg"%>
     <div class="Info">
-    <h2>Laranceto</h2>
-    <p>Menu:</p>
-    <ul class="Info_list" >
-      <li> Pizza (Margerita)</li>
-      <li> Pasta (Rose)</li>
-      <li> Salad </li>
-      <li> Calzone</li>
-      <li> Grilled Vegetables</li>
-    </ul>
-    <a href="https://goo.gl/maps/B6zY5Y5SmJ7zWm8M9"   target="_blank">Google Maps</a>
-    </div>
+      <h2>Laranceto</h2>
+      <p> 〒650-0044 Hyogo, Kobe, Chuo Ward, Higashikawasakicho, 1 Chome−6−1 神戸ハーバーランドumie モザイク 3F</p>
+      <br>
+      <p> Open 12pm to 2pm & 5pm to 9pm</p>
+      </div>
   </div>
   
   <div class="space">
