--- a/italian.html
+++ b/italian.html
@@ -31,7 +31,7 @@
     <img class="italian" src="IMG_2490.jpg">
     <div class="Info">
     <h2>Gaudante</h2>
-    <p> 〒650-0044 Hyogo, Kobe, Chuo Ward, Higashikawasakicho, 1 Chome−6−1 神戸ハーバーランドumie モザイク 3F</p>
+    <p> 〒650-0044 兵庫県神戸市中央区東川崎町１丁目６−1 神戸ハーバーランドumie モザイク 3F 3F</p>
     <br>
     <p> Open 11am to 10pm</p>
     </div>
@@ -44,7 +44,7 @@
     <img class="italian" src="Laranceto.jpg"%>
     <div class="Info">
       <h2>Laranceto</h2>
-      <p> 〒650-0044 Hyogo, Kobe, Chuo Ward, Higashikawasakicho, 1 Chome−6−1 神戸ハーバーランドumie モザイク 3F</p>
+      <p> 〒650-0002 兵庫県神戸市中央区北野町４丁目９ 14 地下1階</p>
       <br>
       <p> Open 12pm to 2pm & 5pm to 9pm</p>
       </div>
