--- a/italian.html
+++ b/italian.html
@@ -55,10 +55,22 @@
   
   <div class="MonaLisa">
     <img class="italian" src="Mona Lisa.jpg"%>
+    <div class="Info">
+      <h2>Mona Lisa</h2>
+      <p> 〒650-0003 兵庫県神戸市中央区山本通２丁目１３−6 Ra・Crew 北野ハンター坂</p>
+      <br>
+      <p> Open 5pm to 3am</p>
+      </div>
   </div>
   <hr>
   <div class="Montdor">
     <img class="italian" src="Image 6-21-23 at 7.50 PM.jpg"%>
+    <div class="Info">
+      <h2>Mont Dor</h2>
+      <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目１７−11 シャルマン中山手</p>
+      <br>
+      <p> Open 12am to 2pm & 6pm to 9pm (Monday Closed)</p>
+      </div>
   </div>
   <hr>
     <div class="Pacific">
