--- a/italian.html
+++ b/italian.html
@@ -62,7 +62,10 @@
       <p> Open 5pm to 3am</p>
       </div>
   </div>
-  <hr>
+  
+  <div class="space">
+    <hr> </div>
+
   <div class="Montdor">
     <img class="italian" src="Image 6-21-23 at 7.50 PM.jpg"%>
     <div class="Info">
