--- a/italian.html
+++ b/italian.html
@@ -75,31 +75,88 @@
       <p> Open 12am to 2pm & 6pm to 9pm (Monday Closed)</p>
       </div>
   </div>
-  <hr>
+  
+  <div class="space">
+    <hr> </div>
+
     <div class="Pacific">
     <img class="italian" src="Pacific.jpg">
+    <div class="Info">
+      <h2>Pacific Oriental Hotel</h2>
+      <p> 〒650-0034 兵庫県神戸市中央区京町25</p>
+      <br>
+      <p> Open 7am to 10 am & 12pm to 4pm & 6pm to 9pm</p>
+      </div>
   </div>
-  <hr>
+ 
+  <div class="space">
+    <hr> </div>
+
   <div class="Quarto">
     <img class="italian" src="Quarto.jpg"%>
+    <div class="Info">
+      <h2>Quarto</h2>
+      <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目３−7 サンハイツ中山手 １階</p>
+      <br>
+      <p> Open 12pm to 9pm</p>
+      </div>
   </div>
-  <hr>
+  
+  <div class="space">
+    <hr> </div>
+
   <div class="Ripple">
     <img class="italian" src="Ripple.jpg"%>
+    <div class="Info">
+      <h2>Ripple</h2>
+      <p> 〒650-0011 兵庫県神戸市中央区下山手通３丁目１−17 神戸マリンビル</p>
+      <br>
+      <p> Open 10am to 10pm</p>
+      </div>
   </div>
-  <hr>
+
+  <div class="space">
+    <hr> </div>
+
   <div class="Salvatore">
     <img class="italian" src="Salvatore.jpg"%>
+    <div class="Info">
+      <h2>Salvatore</h2>
+      <p> 〒650-0021 兵庫県神戸市中央区三宮町１丁目２−2 ﾀﾞｲﾜﾛｲﾈｯﾄﾎﾃﾙ神戸三宮中央通り2F</p>
+      <br>
+      <p> Open 11:30am to 3pm & 5pm to 10:30pm</p>
+      </div>
   </div>
-  <hr>
+  
+  <div class="space">
+    <hr> </div>
+
     <div class="Tana Forno">
     <img class="italian" src="Tana Forno.jpg">
+    <div class="Info">
+      <h2>Tana Forno</h2>
+      <p> 〒650-0001 兵庫県神戸市中央区加納町４丁目３−14 高木ビル 1F</p>
+      <br>
+      <p> Open 11:30am to 3pm & 5pm to 10:30pm</p>
+      </div>
   </div>
-  <hr>
+  
+  <div class="space">
+    <hr> </div>
+
   <div class="Vin Vino">
     <img class="italian" src="Vin Vino.jpg"%>
+    <div class="Info">
+      <h2>Vin Vino</h2>
+      <p> 〒650-0002 兵庫県神戸市中央区北野町２丁目７−1 北野アーバンライフBF-C</p>
+      <br>
+      <p> Open 6pm to 1am</p>
+      </div>
   </div>
-  <hr>
+  
+  <div class="space">
+    <hr> </div>
+
 </body>
 
 </html>
