--- a/italian.html
+++ b/italian.html
@@ -122,7 +122,7 @@
     <img class="italian" src="Salvatore.jpg"%>
     <div class="Info">
       <h2>Salvatore</h2>
-      <p> 〒650-0021 兵庫県神戸市中央区三宮町１丁目２−2 ﾀﾞｲﾜﾛｲﾈｯﾄﾎﾃﾙ神戸三宮中央通り2F</p>
+      <p> 〒650-0021 兵庫県神戸市中央区三宮町１丁目２−2 ﾀﾞｲﾜﾛｲﾈｯﾄﾎﾃﾙ2F</p>
       <br>
       <p> Open 11:30am to 3pm & 5pm to 10:30pm</p>
       </div>
