--- a/italian.html
+++ b/italian.html
@@ -31,7 +31,7 @@
     <img class="italian" src="IMG_2490.jpg">
     <div class="Info">
     <h2>Gaudante</h2>
-    <p> 〒650-0044 兵庫県神戸市中央区東川崎町１丁目６−1 神戸ハーバーランドumie モザイク 3F 3F</p>
+    <p> 〒650-0044 兵庫県神戸市中央区東川崎町１丁目６−1 神戸ハーバーランドumie モザイク 3F</p>
     <br>
     <p> Open 11am to 10pm</p>
     </div>
