--- a/thai.html
+++ b/thai.html
@@ -26,16 +26,42 @@
 
 <h2 class="IR">Thai Restraunts</h2>
   <hr>
+
+
   <div class="Ashiya">
     <img class="italian" src="Ashiya.jpg">
+    <div class="Info">
+      <h2>Baan Thai Ashiya</h2>
+      <p> 〒659-0072 兵庫県芦屋市川西町４−2</p>
+      <br>
+      <p> Open 11:30am to 3pm & 5pm to 10:30pm (Monday Closed)</p>
+      </div>
   </div>
-  <hr>
+  
+  <div class="space">
+    <hr> </div>
+
   <div class="Market">
     <img class="italian" src="Market.jpg"%>
+    <div class="Info">
+      <h2>Baan Thai Market</h2>
+      <p> 〒650-0004 兵庫県神戸市中央区中山手通５丁目１−21</p>
+      <br>
+      <p> Open 11:30am to 2pm & 5pm to 9:30pm (Monday Closed)</p>
+      </div>
   </div>
-  <hr>
+
+  <div class="space">
+  <hr> </div>
+
   <div class="Sannomiya">
     <img class="italian" src="Sannomiya.jpg"%>
+    <div class="Info">
+      <h2>Baan Thai Ashiya</h2>
+      <p> 〒650-0012 兵庫県神戸市中央区北長狭通１丁目８−8 しんせい堂ビル</p>
+      <br>
+      <p> Open 11:30am to 2pm & 5pm to 10pm (Monday Closed)</p>
+      </div>
   </div>
   <hr>
 </body>
