--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									<span class="online_icon"></span>
 								</div>
 								<div class="user_info">
-									<span>ChatBot</span>
+									<span>Chef the ChatBot</span>
 									<p>Ask me anything!</p>
 								</div>
 							</div>
