--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								</div>
 							</div>
 						</div>
-						<div id="messageFormeight" class="card-body msg_card_body">
+						<div id="messageFormeight" class="card-body msg_card_body" color=white>
 							
 							
 						</div>
