--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <div class="header">
   <a class="button" href="index.html">
-  <h1 class="fooddd">Food For You</h1> </a>
+  <h1 class="fooddd" id="head">Food For You</h1> </a>
   <!-- Load icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <a href="search.html"> <img class="serch" src="search.png"</a>
@@ -25,9 +25,9 @@
 
 <div class="subheading">
   <a href = "index.html">
-    <h2 class="home"> Home</h2></a>
+    <h2 class="home" id="head"> Home</h2></a>
   <a href = "cuisines.html">
-    <h2 class="cuisine"> Cuisines</h2></a>
+    <h2 class="cuisine" id="head"> Cuisines</h2></a>
 </div>
   
   <script src="script.js"></script>	
