--- a/index.html
+++ b/index.html
@@ -62,7 +62,36 @@
 					</div>
 				</div>
 			</div>
-        </div>
+    </div>
+
+    <script>
+      $(document).ready(function(){
+        $("#messageArea").on("sumbit", function(event){
+          const date = Date();
+          const hours = date.gethours();
+          const minute = date.getminutes();
+          const str_time = hours+":"+minute;
+          var rawText = $("#text").val();
+
+          var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"><img src="https://i.ibb.co/d5b84Xw/Untitled-design.png" class="rounded-circle user_img_msg"></div></div>';
+					
+					$("#text").val("");
+					$("#messageFormeight").append(userHtml);
+
+					$.ajax({
+						data: {
+							msg: rawText,	
+						},
+						type: "POST",
+						url: "/get",
+					}).done(function(data) {
+						var botHtml = '<div class="d-flex justify-content-start mb-4"><div class="img_cont_msg"><img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img_msg"></div><div class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span></div></div>';
+						$("#messageFormeight").append($.parseHTML(botHtml));
+					});
+					event.preventDefault();
+				});
+        })
+      }
 </body>
 
 </html>
