--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <script>
       $(document).ready(function(){
-        $("#messageArea").on("sumbit", function(event){
+        $("#messageArea").on("submit", function(event){
           const date = Date();
           const hours = date.gethours();
           const minute = date.getminutes();
