--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
     </div>
 
     <script>
-      $(document).ready(function(){
-        $("#messageArea").on("submit", function(event){
-          const date = Date();
-          const hours = date.gethours();
-          const minute = date.getminutes();
-          const str_time = hours+":"+minute;
-          var rawText = $("#text").val();
+			$(document).ready(function() {
+				$("#messageArea").on("submit", function(event) {
+					const date = new Date();
+					const hour = date.getHours();
+					const minute = date.getMinutes();
+					const str_time = hour+":"+minute;
+					var rawText = $("#text").val();
 
-          var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"><img src="https://i.ibb.co/d5b84Xw/Untitled-design.png" class="rounded-circle user_img_msg"></div></div>';
+					var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"><img src="https://i.ibb.co/d5b84Xw/Untitled-design.png" class="rounded-circle user_img_msg"></div></div>';
 					
 					$("#text").val("");
 					$("#messageFormeight").append(userHtml);
@@ -90,7 +90,7 @@
 					});
 					event.preventDefault();
 				});
-        });
+			});
 		</script>
 </body>
 
