--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   
   <script src="script.js"></script>	
 	
+  <h2> Looking for vegetarian and Jain food in Kobe? This is the perfect website for you! Here you can find all the top rated restaurants of different cuisines. You can either click the cuisine button on the top to look for restaurants based on the cuisine you like or you can ask Chef the chatbot about any vegetarian cuisine, dish, or restaurant that Kobe has! </h2>
   <br>
 		<div class="container-fluid h-100">
 			<div class="row justify-content-center h-100">		
