--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
-<body>
+<body background="rgb(2,0,36)" background="linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,88,9,1) 34%, rgba(0,212,255,1) 100%)">
 <div class="header">
   <a class="button" href="index.html">
   <h1 class="fooddd" id="head">Food For You</h1> </a>
