--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
-<body style="background:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,88,9,1) 34%, rgba(0,212,255,1) 100%)">
+<body style="background:linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(255,7,7,1) 50%, rgba(252,176,69,1) 100%)">
 <div class="header">
   <a class="button" href="index.html">
   <h1 class="fooddd" id="head">Food For You</h1> </a>
@@ -31,7 +31,7 @@
   <script src="script.js"></script>	
 	
   <h2 class="prebot"> Looking for vegetarian and Jain food in Kobe? This is the perfect website for you!</h2> 
-  <h4 class="prebot">Here you can find all the top rated restaurants of different cuisines. You can either click the cuisine button on the top to look for restaurants based on the cuisine you like or you can ask Chef the chatbot about any vegetarian cuisine, dish, or restaurant that Kobe has! </h4>
+  <h4 class="prebot">Here you can find all the top rated restaurants of different cuisines. You can either click the Cuisines button on the top to look for restaurants or ask Chef the chatbot! </h4>
   <br>
 		<div class="container-fluid h-100">
 			<div class="row justify-content-center h-100">		
@@ -45,7 +45,7 @@
 								</div>
 								<div class="user_info">
 									<span>Chef the ChatBot</span>
-									<p>Ask me anything!</p>
+									<p>Ask me about any vegetarian cuisine, dish, or restaurant that Kobe has!</p>
 								</div>
 							</div>
 						</div>
