--- a/cuisines.html
+++ b/cuisines.html
@@ -17,13 +17,14 @@
 </div>
 
 <div class="subheading">
-  <a href = "home.html">
-    <h2 class="home"> Home</h2></a>
   <a href = "index.html">
+    <h2 class="home"> Home</h2></a>
+  <a href = "cuisines.html">
     <h2 class="cuisine"> Cuisines</h2></a>
 </div>
 
   <h2 class="different"> Different Cuisines</h2>
+
 <div class="food">
   <a href="italian.html">
   <img class="left" src="Italian.png" width=48.5% height=48.5%> 
@@ -31,21 +32,22 @@
   <a href="thai.html">
   <img class="right" src="Thai.png" width=48.5% height=48.5% align:right> 
   </a> </div>
+
 <div class="food">
-  <a href="italian.html">
-  <img src="italian.JPG" width=49.4% height=49.4%> 
+  <a href="indian.html">
+  <img class="left" src="Indian.png" width=48.5% height=48.5%> 
   </a>
-  <a href="italian.html">
-  <img src="Thai.JPG" width=49.4% height=49.4% align:right> 
+  <a href="japanese.html">
+  <img class="right" src="Japanese.png" width=48.5% height=48.5% align:right> 
   </a> </div>
-<div class="food">
-  <a href="italian.html">
-  <img src="italian.JPG" width=49.4% height=49.4%> 
-  </a>
-  <a href="italian.html">
-  <img src="Thai.JPG" width=49.4% height=49.4% align:right> 
-  </a> </div>
-  <script src="script.js"></script>
+
+  <div class="food">
+    <a href="italian.html">
+    <img class="left" src="Italian.png" width=48.5% height=48.5%> 
+    </a>
+    <a href="thai.html">
+    <img class="right" src="Thai.png" width=48.5% height=48.5% align:right> 
+    </a> </div>
 
   <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
