--- a/japanese.html
+++ b/japanese.html
@@ -30,10 +30,10 @@
   <div class="Chokonomiyaki">
     <img class="italian" src="Mona Lisa.jpg"%>
     <div class="Info">
-      <h2>Raja</h2>
-      <p> 〒650-0023 兵庫県神戸市中央区栄町通２丁目７−４</p>
+      <h2>Chokonomiyaki</h2>
+      <p> 〒650-0003 兵庫県神戸市中央区山本通５丁目４−３ アールジーマンション</p>
       <br>
-      <p> Open 11:30am to 3pm & 5pm to 9:30pm</p>
+      <p> Open 6pm to 11pm</p>
       </div>
   </div>
   
@@ -44,9 +44,9 @@
     <img class="italian" src="IMG_2490.jpg">
     <div class="Info">
     <h2>Kamontei Higashimon</h2>
-    <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目１４−１３ ハンタービル1F ハンタービル</p>
+    <p> 〒650-0004 兵庫県神戸市中央区中山手通１丁目４−１０</p>
     <br>
-    <p> Open 11am to 3:30pm & 5:30pm to 10pm</p>
+    <p> Open 5pm to 2am</p>
     </div>
   </div>
 
@@ -57,9 +57,9 @@
     <img class="italian" src="Laranceto.jpg"%>
     <div class="Info">
       <h2>Kamontei Honten</h2>
-      <p> 〒650-0003 兵庫県神戸市中央区山本通２丁目１２−２１ 203</p>
+      <p> 〒650-0004 兵庫県神戸市中央区中山手通１丁目１３−７ 神戸山下ビル 1F</p>
       <br>
-      <p> Open 11pm to 2pm & 5pm to 9pm</p>
+      <p> Open 5:30pm to 6am</p>
       </div>
   </div>
   
