--- a/cuisines.html
+++ b/cuisines.html
@@ -25,6 +25,9 @@
 
   <h2 class="different"> Different Cuisines</h2>
 
+  <div class="space">
+    <hr> </div>
+
 <div class="food">
   <a href="italian.html">
   <img class="left" src="Italian.png" width=48.5% height=48.5%> 
