--- a/cuisines.html
+++ b/cuisines.html
@@ -45,11 +45,11 @@
   </a> </div>
 
   <div class="food">
-    <a href="italian.html">
-    <img class="left" src="Italian.png" width=48.5% height=48.5%> 
+    <a href="mexican.html">
+    <img class="left" src="Mexican.png" width=48.5% height=48.5%> 
     </a>
-    <a href="thai.html">
-    <img class="right" src="Thai.png" width=48.5% height=48.5% align:right> 
+    <a href="chinese.html">
+    <img class="right" src="Chinese.png" width=48.5% height=48.5% align:right> 
     </a> </div>
 
   <!--
