--- a/mexican.html
+++ b/mexican.html
@@ -28,7 +28,7 @@
   
   <hr>
   <div class="">
-    <img class="italian" src="CrazyKobe.png">
+    <img class="italian" src="Crazy Kobe.jpg">
     <div class="Info">
     <h2>Crazy Burrito Kobe</h2>
     <p> 〒651-0096 兵庫県神戸市中央区雲井通３丁目６−９ 華 1F</p>
