--- a/mexican.html
+++ b/mexican.html
@@ -36,7 +36,7 @@
     <p> Open 11am to 2:30pm & 5pm to 8:30pm</p>
     </div>
   </div>
-  <p>Maps Data: Google, ©2020 p muutos</p>
+  <p class="attribution">Maps Data: Google, ©2020 p muutos</p>
 
   <div class="space">
   <hr> </div>
