--- a/mexican.html
+++ b/mexican.html
@@ -38,7 +38,7 @@
   </div>
   <p class="attribution">Maps Data: Google, ©2020 p muutos</p>
 
-  <div class="space">
+  <div class="smallspace">
   <hr> </div>
   
   <div class="Kusum">
@@ -51,7 +51,7 @@
       </div>
   </div>
   
-  <div class="space">
+  <div class="smallspace">
   <hr> </div>
   
   <div class="Raja">
@@ -64,7 +64,7 @@
       </div>
   </div>
   
-  <div class="space">
+  <div class="smallspace">
     <hr> </div>
 </body>
 
