--- a/mexican.html
+++ b/mexican.html
@@ -27,7 +27,7 @@
 <h2 class="IR">Mexican Restraunts</h2>
   
   <hr>
-  <div class="">
+  <div class="CrazyKobe">
     <img class="italian" src="Crazy Kobe.jpg">
     <div class="Info">
     <h2>Crazy Burrito Kobe</h2>
@@ -41,28 +41,29 @@
   <div class="smallspace">
   <hr> </div>
   
-  <div class="Kusum">
-    <img class="italian" src="CrazyKobe.png"%>
+  <div class="CrazyRokko">
+    <img class="italian" src="Crazy Kobe.jpg"%>
     <div class="Info">
       <h2>Crazy Burrito Rokko</h2>
-      <p> 〒650-0003 兵庫県神戸市中央区山本通２丁目１２−２１ 203</p>
+      <p> 〒658-0032 兵庫県神戸市東灘区向洋町中５丁目１５ マーケットシーン 103B</p>
       <br>
-      <p> Open 11pm to 2pm & 5pm to 9pm</p>
+      <p> Open 11am to 2pm</p>
       </div>
   </div>
   
   <div class="smallspace">
   <hr> </div>
   
-  <div class="Raja">
-    <img class="italian" src="Mona Lisa.jpg"%>
+  <div class="El Pancho">
+    <img class="italian" src="El Pancho.jpg"%>
     <div class="Info">
       <h2>El Pancho</h2>
-      <p> 〒650-0023 兵庫県神戸市中央区栄町通２丁目７−４</p>
+      <p> 〒542-0085 大阪府大阪市中央区心斎橋筋１丁目１０−１ 心斎橋タワービル 8F</p>
       <br>
-      <p> Open 11:30am to 3pm & 5pm to 9:30pm</p>
+      <p> Open 11:30am to 11pm</p>
       </div>
   </div>
+  <p class="attribution">Maps Data: Google, ©2023</p>
   
   <div class="smallspace">
     <hr> </div>
