--- a/mexican.html
+++ b/mexican.html
@@ -50,7 +50,8 @@
       <p> Open 11am to 2pm</p>
       </div>
   </div>
-  
+  <p class="attribution">Maps Data: Google, ©2020 p muutos</p>
+
   <div class="smallspace">
   <hr> </div>
   
@@ -67,6 +68,7 @@
   
   <div class="smallspace">
     <hr> </div>
+  
 </body>
 
 </html>
