--- a/chinese.html
+++ b/chinese.html
@@ -27,6 +27,7 @@
 <h2 class="IR">Chinese Restraunts</h2>
   
   <hr>
+  <a href="XinLin.html">
   <div class="Xin Lin">
     <img class="italian" src="Xinlin.jpg">
     <div class="Info">
@@ -36,7 +37,7 @@
     <p> Open 11:30am to 3pm & 5pm to 10pm</p>
     </div>
   </div>
-
+  </a>
   <div class="space">
   <hr> </div>
 </body>
