--- a/mexican.html
+++ b/mexican.html
@@ -31,7 +31,7 @@
     <img class="italian" src="Crazy Kobe.jpg">
     <div class="Info">
     <h2>Crazy Burrito Kobe</h2>
-    <p> 〒651-0096 兵庫県神戸市中央区雲井通３丁目６−９ 華 1F</p>
+    <p> 〒651-0096 兵庫県神戸市中央区雲井通３丁目６−９ 華</p>
     <br>
     <p> Open 11am to 2:30pm & 5pm to 8:30pm</p>
     </div>
