--- a/XinLin.html
+++ b/XinLin.html
@@ -33,7 +33,16 @@
     <p> Open 11:30am to 3pm & 5pm to 10pm</p>
     </div>
   </div>
-
+<div class="menu">
+<h3>Menu</h3>
+<ul> 
+  <li> Spring Rolls</li>
+  <li> Soup </li>
+  <li> <ul> <li> Hot and Sour Soup</li>
+            <li> Corn Soup </li>
+  </ul></li>
+</ul>
+</div>
 </body>
 
 </html>
