--- a/XinLin.html
+++ b/XinLin.html
@@ -31,6 +31,9 @@
     <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目１３−１２ ランドマークビル神戸</p>
     <br>
     <p> Open 11:30am to 3pm & 5pm to 10pm</p>
+    <a href="https://xinlin.jp/" class="link"><p>https://xinlin.jp/</p></a>
+    <p> 078-242-9911</p>
+    <a href="https://goo.gl/maps/X8XeDt6942TE1r5D8" class="link"><p>https://goo.gl/maps/X8XeDt6942TE1r5D8</p></a>
     </div>
   </div>
 <div class="menu">
