--- a/XinLin.html
+++ b/XinLin.html
@@ -34,6 +34,8 @@
     </div>
   </div>
 
+<br>
+
 <div>
   <div class="italian">
 <h3>Menu</h3>
@@ -47,7 +49,7 @@
 </div>
 <div class="Info">
   <a href="https://xinlin.jp/" class="link"><p>https://xinlin.jp/</p></a>
-  <a href="078-242-9911" class=link><p>078-242-9911</p></a>
+  <a href="tel:078-242-9911" class=link><p>078-242-9911</p></a>
   <a href="https://goo.gl/maps/X8XeDt6942TE1r5D8" class="link"><p>https://goo.gl/maps/X8XeDt6942TE1r5D8</p></a>
 </div>
 </div>
