--- a/XinLin.html
+++ b/XinLin.html
@@ -34,20 +34,20 @@
     </div>
   </div>
 
-<br>
+<br style:"width = 100%">
 
 <div>
   <div class="Menu">
-<h3>Menu</h3>
-<ul> 
+  <h3>Menu</h3>
+  <ul> 
   <li> Spring Rolls</li>
   <li> Soup </li>
   <li> <ul> <li> Hot and Sour Soup</li>
             <li> Corn Soup </li>
   </ul></li>
-</ul>
-</div>
-<div class="Info">
+  </ul>
+  </div>
+  <div class="Info">
   <a href="https://xinlin.jp/" class="link"><p>https://xinlin.jp/</p></a>
   <a href="tel:078-242-9911" class=link><p>078-242-9911</p></a>
   <a href="https://goo.gl/maps/X8XeDt6942TE1r5D8" class="link"><p>https://goo.gl/maps/X8XeDt6942TE1r5D8</p></a>
