--- a/XinLin.html
+++ b/XinLin.html
@@ -37,7 +37,7 @@
 <br style:"width = 100%">
 
 <div>
-  <div class="Menu">
+  <div class="menu">
   <h3>Menu</h3>
   <ul> 
   <li> Spring Rolls</li>
