--- a/XinLin.html
+++ b/XinLin.html
@@ -24,6 +24,7 @@
     <h2 class="cuisine"> Cuisines</h2></a>
 </div>
 
+<div class="sizing">
 <div class="Xin Lin">
     <img class="italian" src="Xinlin.jpg">
     <div class="Info">
@@ -53,6 +54,7 @@
   <a href="https://xinlin.jp/" class="link"><p>https://xinlin.jp/</p></a>
   <a href="tel:078-242-9911" class=link><p>078-242-9911</p></a>
   <a href="https://goo.gl/maps/X8XeDt6942TE1r5D8" class="link"><p>https://goo.gl/maps/X8XeDt6942TE1r5D8</p></a>
+</div>
 </div>
 </div>
 </body>
