--- a/XinLin.html
+++ b/XinLin.html
@@ -26,7 +26,7 @@
 
 <div class="sizing">
 <div class="Xin Lin">
-    <img class="italian" src="Xinlin.jpg">
+    <img class="SpImage" src="Xinlin.jpg">
     <div class="Info">
     <h2>Xin Lin</h2>
     <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目１３−１２ ランドマークビル神戸</p>
