--- a/XinLin.html
+++ b/XinLin.html
@@ -51,9 +51,10 @@
   </ul>
   </div>
   <div class="Info">
+  <h3>Links</h3>
   <a href="https://xinlin.jp/" class="link"><p>https://xinlin.jp/</p></a>
   <a href="tel:078-242-9911" class=link><p>078-242-9911</p></a>
-  <a href="https://goo.gl/maps/X8XeDt6942TE1r5D8" class="link"><p>https://goo.gl/maps/X8XeDt6942TE1r5D8</p></a>
+  <a href="https://goo.gl/maps/X8XeDt6942TE1r5D8" class="link"><p>Google Maps</p></a>
 </div>
 </div>
 </div>
