--- a/XinLin.html
+++ b/XinLin.html
@@ -8,8 +8,8 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-<div class="header">
+<body style="
+background-color: black;>
   <a class="button" href="index.html">
   <h1 class="fooddd">Food For You</h1> </a>
   <!-- Load icon library -->
