--- a/XinLin.html
+++ b/XinLin.html
@@ -45,9 +45,8 @@ background-color: black;>
   <ul> 
   <li> Spring Rolls</li>
   <li> Soup </li>
-  <li> <ul> <li> Hot and Sour Soup</li>
-            <li> Corn Soup </li>
-  </ul></li>
+  <li style="margin-left:2em"> Hot and Sour Soup</li>
+  <li style="margin-left:2em"> Corn Soup </li>
   </ul>
   </div>
   <div class="Info">
