--- a/XinLin.html
+++ b/XinLin.html
@@ -8,12 +8,14 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body style="
-background-color: black;>
+<body style="background-color: black">
+<div class="header">
   <a class="button" href="index.html">
   <h1 class="fooddd">Food For You</h1> </a>
   <!-- Load icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <a href="search.html"> <img class="serch" src="search.png"> </a>
+</div>
 
 <div class="subheading">
   <a href = "index.html">
@@ -43,8 +45,8 @@ background-color: black;>
   <ul> 
   <li> Spring Rolls</li>
   <li> Soup </li>
-  <li style="margin-left:2em"> Hot and Sour Soup</li>
-  <li style="margin-left:2em"> Corn Soup </li>
+  <li>Hot and Sour Soup</li>
+  <li> Corn Soup </li>
   </ul>
   </div>
   <div class="Info">
