--- a/XinLin.html
+++ b/XinLin.html
@@ -45,8 +45,8 @@
   <ul> 
   <li> Spring Rolls</li>
   <li> Soup </li>
-  <li>Hot and Sour Soup</li>
-  <li> Corn Soup </li>
+  <li style="margin-left:2em"> Hot and Sour Soup</li>
+  <li style="margin-left:2em"> Corn Soup </li>
   </ul>
   </div>
   <div class="Info">
