--- a/XinLin.html
+++ b/XinLin.html
@@ -44,9 +44,17 @@
   <h3>Menu</h3>
   <ul> 
   <li> Spring Rolls</li>
+  <li> Dumplings</li>
   <li> Soup </li>
   <li style="margin-left:2em"> Hot and Sour Soup</li>
   <li style="margin-left:2em"> Corn Soup </li>
+  <li> Bread</li>
+  <li style="margin-left:2em"> Fried Bread</li>
+  <li style="margin-left:2em"> Steamed Bread</li>
+  <li> Lettuce Wrap</li>
+  <li> Mabo Tofu</li>
+  <li> Tan Tan Noodles</li>
+  <li> Hakka Noodle</li>
   </ul>
   </div>
   <div class="Info">
