--- a/cuisines.html
+++ b/cuisines.html
@@ -27,6 +27,7 @@
 
 <hr> 
 
+<div class="sizing" id="cuisinepage">
 <div class="food">
   <a href="italian.html">
   <img class="left" src="Italian.png" width=48.5% height=48.5%> 
@@ -51,6 +52,7 @@
     <img class="right" src="Chinese.png" width=48.5% height=48.5% align:right> 
     </a> </div>
     <br>
+</div>
 </body>
 
 </html>
