--- a/cuisines.html
+++ b/cuisines.html
@@ -30,26 +30,26 @@
 <div class="sizing" id="cuisinepage">
 <div class="food">
   <a href="italian.html">
-  <img class="left" src="Italian.png" width=48.5% height=48.5%> 
+  <img class="left" src="Italian Square.png" width=48.5% height=48.5%> 
   </a>
   <a href="thai.html">
-  <img class="right" src="Thai.png" width=48.5% height=48.5% align:right> 
+  <img class="right" src="Thai Square.png" width=48.5% height=48.5% align:right> 
   </a> </div>
 
 <div class="food">
   <a href="indian.html">
-  <img class="left" src="Indian.png" width=48.5% height=48.5%> 
+  <img class="left" src="Indian Square.png" width=48.5% height=48.5%> 
   </a>
   <a href="japanese.html">
-  <img class="right" src="Japanese.png" width=48.5% height=48.5% align:right> 
+  <img class="right" src="Japanese Square.png" width=48.5% height=48.5% align:right> 
   </a> </div>
 
   <div class="food">
     <a href="mexican.html">
-    <img class="left" src="Mexican.png" width=48.5% height=48.5%> 
+    <img class="left" src="Mexican Square.png" width=48.5% height=48.5%> 
     </a>
     <a href="chinese.html">
-    <img class="right" src="Chinese.png" width=48.5% height=48.5% align:right> 
+    <img class="right" src="Chinese Square.png" width=48.5% height=48.5% align:right> 
     </a> </div>
     <br>
 </div>
