--- a/italian.html
+++ b/italian.html
@@ -27,7 +27,7 @@
 <h2 class="IR">Italian Restraunts</h2>
   
   <hr>
-  <div class="Gaudante">
+  <div class="index">
     <img class="italian" src="IMG_2490.jpg">
     <div class="Info">
     <h2>Gaudante</h2>
@@ -40,7 +40,7 @@
   <div class="space">
   <hr> </div>
   
-  <div class="Laranceto">
+  <div class="index">
     <img class="italian" src="Laranceto.jpg"%>
     <div class="Info">
       <h2>Laranceto</h2>
@@ -53,7 +53,7 @@
   <div class="space">
   <hr> </div>
   
-  <div class="MonaLisa">
+  <div class="index">
     <img class="italian" src="Mona Lisa.jpg"%>
     <div class="Info">
       <h2>Mona Lisa</h2>
@@ -66,7 +66,7 @@
   <div class="space">
     <hr> </div>
 
-  <div class="Montdor">
+  <div class="index">
     <img class="italian" src="Image 6-21-23 at 7.50 PM.jpg"%>
     <div class="Info">
       <h2>Mont Dor</h2>
@@ -79,7 +79,7 @@
   <div class="space">
     <hr> </div>
 
-    <div class="Pacific">
+    <div class="index">
     <img class="italian" src="Pacific.jpg">
     <div class="Info">
       <h2>Pacific Oriental Hotel</h2>
@@ -92,7 +92,7 @@
   <div class="space">
     <hr> </div>
 
-  <div class="Quarto">
+  <div class="index">
     <img class="italian" src="Quarto.jpg"%>
     <div class="Info">
       <h2>Quarto</h2>
@@ -105,7 +105,7 @@
   <div class="space">
     <hr> </div>
 
-  <div class="Ripple">
+  <div class="index">
     <img class="italian" src="Ripple.jpg"%>
     <div class="Info">
       <h2>Ripple</h2>
@@ -118,7 +118,7 @@
   <div class="space">
     <hr> </div>
 
-  <div class="Salvatore">
+  <div class="index">
     <img class="italian" src="Salvatore.jpg"%>
     <div class="Info">
       <h2>Salvatore</h2>
@@ -131,7 +131,7 @@
   <div class="space">
     <hr> </div>
 
-    <div class="Tana Forno">
+    <div class="index">
     <img class="italian" src="Tana Forno.jpg">
     <div class="Info">
       <h2>Tana Forno</h2>
@@ -144,7 +144,7 @@
   <div class="space">
     <hr> </div>
 
-  <div class="Vin Vino">
+  <div class="index">
     <img class="italian" src="Vin Vino.jpg"%>
     <div class="Info">
       <h2>Vin Vino</h2>
