--- a/mexican.html
+++ b/mexican.html
@@ -38,7 +38,7 @@
   </div>
   <p class="attribution">Maps Data: Google, ©2020 p muutos</p>
 
-  <div class="smallspace">
+  <div class="space">
   <hr> </div>
   
   <div class="CrazyRokko">
@@ -52,7 +52,7 @@
   </div>
   <p class="attribution">Maps Data: Google, ©2020 p muutos</p>
 
-  <div class="smallspace">
+  <div class="space">
   <hr> </div>
   
   <div class="El Pancho">
@@ -66,7 +66,7 @@
   </div>
   <p class="attribution">Maps Data: Google, ©2023</p>
   
-  <div class="smallspace">
+  <div class="space">
     <hr> </div>
   
 </body>
