--- a/chinese.html
+++ b/chinese.html
@@ -27,6 +27,8 @@
 <h2 class="IR">Chinese Restraunts</h2>
   
   <hr>
+
+<div class="index">
   <a href="XinLin.html">
   <div class="Xin Lin">
     <img class="italian" src="Xinlin.jpg">
@@ -38,6 +40,8 @@
     </div>
   </div>
   </a>
+</div>
+
   <div class="space">
   <hr> </div>
 </body>
