--- a/indian.html
+++ b/indian.html
@@ -27,7 +27,7 @@
 <h2 class="IR">Indian Restraunts</h2>
   
   <hr>
-  <div class="Aarti Kitano">
+  <div class="index">
     <img class="italian" src="IMG_2490.jpg">
     <div class="Info">
     <h2>Aarti Kitano</h2>
@@ -40,7 +40,7 @@
   <div class="space">
   <hr> </div>
   
-  <div class="Kusum">
+  <div class="index">
     <img class="italian" src="Laranceto.jpg"%>
     <div class="Info">
       <h2>Kusum</h2>
@@ -53,7 +53,7 @@
   <div class="space">
   <hr> </div>
   
-  <div class="Raja">
+  <div class="index">
     <img class="italian" src="Mona Lisa.jpg"%>
     <div class="Info">
       <h2>Raja</h2>
@@ -66,7 +66,7 @@
   <div class="space">
     <hr> </div>
 
-  <div class="The India Club">
+  <div class="index">
     <img class="italian" src="Image 6-21-23 at 7.50 PM.jpg"%>
     <div class="Info">
       <h2>The India Club</h2>
