--- a/japanese.html
+++ b/japanese.html
@@ -27,7 +27,7 @@
 <h2 class="IR">Japanese Restraunts</h2>
   
   <hr>
-  <div class="Chokonomiyaki">
+  <div class="index">
     <img class="italian" src="Mona Lisa.jpg"%>
     <div class="Info">
       <h2>Chokonomiyaki</h2>
@@ -40,7 +40,7 @@
   <div class="space">
     <hr> </div>
 
-  <div class="Kamontei Higashimon">
+  <div class="index">
     <img class="italian" src="IMG_2490.jpg">
     <div class="Info">
     <h2>Kamontei Higashimon</h2>
@@ -53,7 +53,7 @@
   <div class="space">
   <hr> </div>
   
-  <div class="Kamontei Honten">
+  <div class="index">
     <img class="italian" src="Laranceto.jpg"%>
     <div class="Info">
       <h2>Kamontei Honten</h2>
