--- a/thai.html
+++ b/thai.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Thai</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -28,7 +28,7 @@
   <hr>
 
 
-  <div class="Ashiya">
+  <div class="index">
     <img class="italian" src="Ashiya.jpg">
     <div class="Info">
       <h2>Baan Thai Ashiya</h2>
@@ -41,7 +41,7 @@
   <div class="space">
     <hr> </div>
 
-  <div class="Market">
+  <div class="index">
     <img class="italian" src="Market.jpg"%>
     <div class="Info">
       <h2>Baan Thai Market</h2>
@@ -54,7 +54,7 @@
   <div class="space">
   <hr> </div>
 
-  <div class="Sannomiya">
+  <div class="index">
     <img class="italian" src="Sannomiya.jpg"%>
     <div class="Info">
       <h2>Baan Thai Ashiya</h2>
