--- a/XinLin.html
+++ b/XinLin.html
@@ -24,7 +24,7 @@
     <h2 class="cuisine"> Cuisines</h2></a>
 </div>
 
-<div class="sizing">
+<div class="sizing" id="'restraunt">
 <div class="Xin Lin">
     <img class="SpImage" src="Xinlin.jpg">
     <div class="Info">
