--- a/mexican.html
+++ b/mexican.html
@@ -27,7 +27,7 @@
 <h2 class="IR">Mexican Restraunts</h2>
   
   <hr>
-  <div class="CrazyKobe">
+  <div class="index">
     <img class="italian" src="Crazy Kobe.jpg">
     <div class="Info">
     <h2>Crazy Burrito Kobe</h2>
@@ -41,7 +41,7 @@
   <div class="space">
   <hr> </div>
   
-  <div class="CrazyRokko">
+  <div class="index">
     <img class="italian" src="Crazy Kobe.jpg"%>
     <div class="Info">
       <h2>Crazy Burrito Rokko</h2>
@@ -55,7 +55,7 @@
   <div class="space">
   <hr> </div>
   
-  <div class="El Pancho">
+  <div class="index">
     <img class="italian" src="El Pancho.jpg"%>
     <div class="Info">
       <h2>El Pancho</h2>
