--- a/XinLin.html
+++ b/XinLin.html
@@ -24,7 +24,7 @@
     <h2 class="cuisine"> Cuisines</h2></a>
 </div>
 
-<div class="sizing" id="'restaraunt">
+<div class="sizing" id="restaraunt">
 <div class="Xin Lin">
     <img class="SpImage" src="Xinlin.jpg">
     <div class="Info" id="size">
@@ -58,7 +58,7 @@
   </ul>
   </div>
 
-  <div class="Info">
+  <div class="Info" id="size">
   <h3>Links</h3>
   <a href="https://xinlin.jp/" class="link"><p>https://xinlin.jp/</p></a>
   <a href="tel:078-242-9911" class=link><p>078-242-9911</p></a>
