--- a/XinLin.html
+++ b/XinLin.html
@@ -32,6 +32,8 @@
     <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目１３−１２ ランドマークビル神戸</p>
     <br>
     <p> Open 11:30am to 3pm & 5pm to 10pm</p>
+    <br>
+    <p> Maps Data: Google, ©2023</p>
     </div>
   </div>
 
