--- a/chinese.html
+++ b/chinese.html
@@ -30,7 +30,7 @@
 
 <div class="index">
   <a href="XinLin.html">
-  <div class="Xin Lin">
+  <div class="box">
     <img class="italian" src="Xinlin.jpg">
     <div class="Info">
     <h2>Xin Lin</h2>
