--- a/indian.html
+++ b/indian.html
@@ -28,6 +28,8 @@
   
   <hr>
   <div class="index">
+    <a href="Aarti.html">
+      <div class="box">
     <img class="italian" src="IMG_2490.jpg">
     <div class="Info">
     <h2>Aarti Kitano</h2>
@@ -36,11 +38,15 @@
     <p> Open 11am to 3:30pm & 5:30pm to 10pm</p>
     </div>
   </div>
+</a>
+  </div>
 
   <div class="space">
   <hr> </div>
   
   <div class="index">
+    <a href="Kusum.html">
+      <div class="box">
     <img class="italian" src="Laranceto.jpg"%>
     <div class="Info">
       <h2>Kusum</h2>
@@ -48,12 +54,16 @@
       <br>
       <p> Open 11pm to 2pm & 5pm to 9pm</p>
       </div>
+    </div>
+  </a>
   </div>
   
   <div class="space">
   <hr> </div>
   
   <div class="index">
+    <a href="Raja.html">
+      <div class="box">
     <img class="italian" src="Mona Lisa.jpg"%>
     <div class="Info">
       <h2>Raja</h2>
@@ -61,12 +71,16 @@
       <br>
       <p> Open 11:30am to 3pm & 5pm to 9:30pm</p>
       </div>
+    </div>
+  </a>
   </div>
   
   <div class="space">
     <hr> </div>
 
   <div class="index">
+    <a href="IC.html">
+      <div class="box">
     <img class="italian" src="Image 6-21-23 at 7.50 PM.jpg"%>
     <div class="Info">
       <h2>The India Club</h2>
@@ -74,8 +88,13 @@
       <br>
       <p> Open 11:30am to 11pm</p>
       </div>
+    </div>
+  </a>
   </div>
-  </div>
+
+  <div class="space">
+    <hr> </div>
+
 </body>
 
 </html>
