--- a/italian.html
+++ b/italian.html
@@ -27,7 +27,11 @@
 <h2 class="IR">Italian Restraunts</h2>
   
   <hr>
-  <div class="index">
+
+
+<div class="index">
+  <a href="Gaudante.html">
+    <div class="box">
     <img class="italian" src="IMG_2490.jpg">
     <div class="Info">
     <h2>Gaudante</h2>
@@ -36,11 +40,15 @@
     <p> Open 11am to 10pm</p>
     </div>
   </div>
+  </a>
+  </div>
 
   <div class="space">
   <hr> </div>
   
   <div class="index">
+    <a href="Laranceto.html">
+    <div class="box">
     <img class="italian" src="Laranceto.jpg"%>
     <div class="Info">
       <h2>Laranceto</h2>
@@ -48,12 +56,16 @@
       <br>
       <p> Open 12pm to 2pm & 5pm to 9pm</p>
       </div>
+    </div>
+  </a>
   </div>
   
   <div class="space">
   <hr> </div>
   
   <div class="index">
+    <a href="MonaLisa.html">
+      <div class="box">
     <img class="italian" src="Mona Lisa.jpg"%>
     <div class="Info">
       <h2>Mona Lisa</h2>
@@ -61,12 +73,16 @@
       <br>
       <p> Open 5pm to 3am</p>
       </div>
+    </div>
+  </a>
   </div>
   
   <div class="space">
     <hr> </div>
 
   <div class="index">
+    <a href="MontDor.html">
+      <div class="box">
     <img class="italian" src="Image 6-21-23 at 7.50 PM.jpg"%>
     <div class="Info">
       <h2>Mont Dor</h2>
@@ -74,12 +90,16 @@
       <br>
       <p> Open 12am to 2pm & 6pm to 9pm (Monday Closed)</p>
       </div>
+    </div>
+  </a>
   </div>
   
   <div class="space">
     <hr> </div>
 
     <div class="index">
+      <a href="pacific.html">
+        <div class="box">
     <img class="italian" src="Pacific.jpg">
     <div class="Info">
       <h2>Pacific Oriental Hotel</h2>
@@ -87,12 +107,16 @@
       <br>
       <p> Open 7am to 10 am & 12pm to 4pm & 6pm to 9pm</p>
       </div>
+    </div>
+  </a>
   </div>
  
   <div class="space">
     <hr> </div>
 
   <div class="index">
+    <a href="quarto.html">
+      <div class="box">
     <img class="italian" src="Quarto.jpg"%>
     <div class="Info">
       <h2>Quarto</h2>
@@ -100,12 +124,16 @@
       <br>
       <p> Open 12pm to 9pm</p>
       </div>
+    </div>
+  </a>
   </div>
   
   <div class="space">
     <hr> </div>
 
   <div class="index">
+    <a href="ripple.html">
+      <div class="box">
     <img class="italian" src="Ripple.jpg"%>
     <div class="Info">
       <h2>Ripple</h2>
@@ -113,12 +141,16 @@
       <br>
       <p> Open 10am to 10pm</p>
       </div>
+    </div>
+  </a>
   </div>
 
   <div class="space">
     <hr> </div>
 
   <div class="index">
+    <a href="salvatore.html">
+      <div class="box">
     <img class="italian" src="Salvatore.jpg"%>
     <div class="Info">
       <h2>Salvatore</h2>
@@ -126,12 +158,16 @@
       <br>
       <p> Open 11:30am to 3pm & 5pm to 10:30pm</p>
       </div>
+    </div>
+  </a>
   </div>
   
   <div class="space">
     <hr> </div>
 
-    <div class="index">
+  <div class="index">
+    <a href="TanaForno.html">
+      <div class="box">
     <img class="italian" src="Tana Forno.jpg">
     <div class="Info">
       <h2>Tana Forno</h2>
@@ -139,12 +175,16 @@
       <br>
       <p> Open 11:30am to 3pm & 5pm to 10:30pm</p>
       </div>
+    </div>
+  </a>
   </div>
   
   <div class="space">
     <hr> </div>
 
   <div class="index">
+    <a href="VinVino.html">
+      <div class="box">
     <img class="italian" src="Vin Vino.jpg"%>
     <div class="Info">
       <h2>Vin Vino</h2>
@@ -152,6 +192,8 @@
       <br>
       <p> Open 6pm to 1am</p>
       </div>
+    </div>
+  </a>
   </div>
   
   <div class="space">
