--- a/japanese.html
+++ b/japanese.html
@@ -28,6 +28,8 @@
   
   <hr>
   <div class="index">
+    <a href="Chokonomiyaki.html">
+      <div class="box">
     <img class="italian" src="Mona Lisa.jpg"%>
     <div class="Info">
       <h2>Chokonomiyaki</h2>
@@ -35,12 +37,16 @@
       <br>
       <p> Open 6pm to 11pm</p>
       </div>
+    </div>
+  </a>
   </div>
   
   <div class="space">
     <hr> </div>
 
   <div class="index">
+    <a href="KamonteiHig.html">
+      <div class="box">
     <img class="italian" src="IMG_2490.jpg">
     <div class="Info">
     <h2>Kamontei Higashimon</h2>
@@ -49,11 +55,15 @@
     <p> Open 5pm to 2am</p>
     </div>
   </div>
+</a>
+  </div>
 
   <div class="space">
   <hr> </div>
   
   <div class="index">
+    <a href="KamonteiHon.html">
+      <div class="box">
     <img class="italian" src="Laranceto.jpg"%>
     <div class="Info">
       <h2>Kamontei Honten</h2>
@@ -61,6 +71,8 @@
       <br>
       <p> Open 5:30pm to 6am</p>
       </div>
+    </div>
+  </a>
   </div>
   
   <div class="space">
