--- a/mexican.html
+++ b/mexican.html
@@ -28,44 +28,59 @@
   
   <hr>
   <div class="index">
+    <a href="CBSannno.html">
+      <div class="box">
     <img class="italian" src="Crazy Kobe.jpg">
     <div class="Info">
     <h2>Crazy Burrito Kobe</h2>
     <p> 〒651-0096 兵庫県神戸市中央区雲井通３丁目６−９ 華</p>
     <br>
     <p> Open 11am to 2:30pm & 5pm to 8:30pm</p>
+    <br> 
+    <p>Maps Data: Google, ©2020 p muutos</p>
     </div>
   </div>
-  <p class="attribution">Maps Data: Google, ©2020 p muutos</p>
+</a>
+  </div>
 
   <div class="space">
   <hr> </div>
   
   <div class="index">
+    <a href="CBRokko.html">
+      <div class="box">
     <img class="italian" src="Crazy Kobe.jpg"%>
     <div class="Info">
       <h2>Crazy Burrito Rokko</h2>
       <p> 〒658-0032 兵庫県神戸市東灘区向洋町中５丁目１５ マーケットシーン 103B</p>
       <br>
       <p> Open 11am to 2pm</p>
+      <br>
+      <p>Maps Data: Google, ©2020 p muutos</p>
       </div>
+    </div>
+  </a>
   </div>
-  <p class="attribution">Maps Data: Google, ©2020 p muutos</p>
 
   <div class="space">
   <hr> </div>
   
   <div class="index">
+    <a href="elpancho.html">
+      <div class="box">
     <img class="italian" src="El Pancho.jpg"%>
     <div class="Info">
       <h2>El Pancho</h2>
       <p> 〒542-0085 大阪府大阪市中央区心斎橋筋１丁目１０−１ 心斎橋タワービル 8F</p>
       <br>
       <p> Open 11:30am to 11pm</p>
+      <br>
+      <p class="attribution">Maps Data: Google, ©2023</p>
       </div>
+    </div>
+  </a>
   </div>
-  <p class="attribution">Maps Data: Google, ©2023</p>
-  
+
   <div class="space">
     <hr> </div>
   
