--- a/thai.html
+++ b/thai.html
@@ -29,6 +29,8 @@
 
 
   <div class="index">
+    <a href="ashiya.html">
+      <div class="box">
     <img class="italian" src="Ashiya.jpg">
     <div class="Info">
       <h2>Baan Thai Ashiya</h2>
@@ -36,12 +38,16 @@
       <br>
       <p> Open 11:30am to 3pm & 5pm to 10:30pm (Monday Closed)</p>
       </div>
+    </div>
+  </a>
   </div>
   
   <div class="space">
     <hr> </div>
 
   <div class="index">
+    <a href="market.html">
+      <div class="box">
     <img class="italian" src="Market.jpg"%>
     <div class="Info">
       <h2>Baan Thai Market</h2>
@@ -49,21 +55,30 @@
       <br>
       <p> Open 12am to 2pm & 5pm to 9pm (Monday Closed)</p>
       </div>
+    </div>
+  </a>
   </div>
 
   <div class="space">
   <hr> </div>
 
   <div class="index">
+    <a href="Sanno.html">
+      <div class="box">
     <img class="italian" src="Sannomiya.jpg"%>
     <div class="Info">
-      <h2>Baan Thai Ashiya</h2>
+      <h2>Baan Thai Sanno</h2>
       <p> 〒650-0012 兵庫県神戸市中央区北長狭通１丁目８−8 しんせい堂ビル</p>
       <br>
       <p> Open 11:30am to 2pm & 5pm to 10pm (Monday Closed)</p>
       </div>
+    </div>
+  </a>
   </div>
-  <hr>
+
+  <div class="space">
+    <hr> </div>
+    
 </body>
 
 </html>
