--- a/mexican.html
+++ b/mexican.html
@@ -75,7 +75,7 @@
       <br>
       <p> Open 11:30am to 11pm</p>
       <br>
-      <p class="attribution">Maps Data: Google, ©2023</p>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
