--- a/mexican.html
+++ b/mexican.html
@@ -51,7 +51,7 @@
       <div class="box">
     <img class="italian" src="Crazy Kobe.jpg"%>
     <div class="Info">
-      <h2>Crazy Burrito Rokko</h2>
+      <h2 style="font-size: medium;">Crazy Burrito Rokko</h2>
       <p> 〒658-0032 兵庫県神戸市東灘区向洋町中５丁目１５ マーケットシーン 103B</p>
       <br>
       <p> Open 11am to 2pm</p>
