--- a/XinLin.html
+++ b/XinLin.html
@@ -8,7 +8,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body style="background-color: black">
+<body style="background-color: royalblue">
 <div class="header">
   <a class="button" href="index.html">
   <h1 class="fooddd">Food For You</h1> </a>
