--- a/XinLin.html
+++ b/XinLin.html
@@ -27,7 +27,7 @@
 <div class="sizing" id="restaraunt">
 <div class="Xin Lin">
     <img class="SpImage" src="Xinlin.jpg">
-    <div class="Info" id="size">
+    <div class="Info" id="size" style="margin-top: 5px;">
     <h2>Xin Lin</h2>
     <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目１３−１２ ランドマークビル神戸</p>
     <br>
@@ -58,14 +58,14 @@
   </ul>
   </div>
 
-  <div class="Info" id="size">
+  <div class="Info" id="size" style="margin-left: 22px;">
+  <br>
+  <h3>Location</h3>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3308267381185!2d135.18535168538028!3d34.69683480310006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008ee16b24e02d%3A0x2a18a51e19d99f0f!2z5Lit5Zu95paZ55CGIOmmqOaelyBYSU5MSU4!5e0!3m2!1sen!2sjp!4v1691836091272!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
   <h3>Links</h3>
   <a href="https://xinlin.jp/" class="link"><p>https://xinlin.jp/</p></a>
   <a href="tel:078-242-9911" class=link><p>078-242-9911</p></a>
   <a href="https://goo.gl/maps/X8XeDt6942TE1r5D8" class="link"><p>Google Maps</p></a>
-  <br>
-  <h3>Location</h3>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3308267381185!2d135.18535168538028!3d34.69683480310006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008ee16b24e02d%3A0x2a18a51e19d99f0f!2z5Lit5Zu95paZ55CGIOmmqOaelyBYSU5MSU4!5e0!3m2!1sen!2sjp!4v1691836091272!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
 </div>
 </div>
 </div>
