--- a/italian.html
+++ b/italian.html
@@ -34,7 +34,7 @@
     <div class="box">
     <img class="italian" src="IMG_2490.jpg">
     <div class="Info">
-    <h2>Gaudante</h2>
+    <h2>Gaudente</h2>
     <p> 〒650-0044 兵庫県神戸市中央区東川崎町１丁目６−1 神戸ハーバーランドumie モザイク 3F</p>
     <br>
     <p> Open 11am to 10pm</p>
