--- a/XinLin.html
+++ b/XinLin.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Chinese</title>
+  <title>Xin Lin</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -58,7 +58,7 @@
   </ul>
   </div>
 
-  <div class="Info" id="size" style="margin-left: 5px;">
+  <div class="Info" id="size" style="margin-left: 3px;">
   <h3>Location</h3>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3308267381185!2d135.18535168538028!3d34.69683480310006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008ee16b24e02d%3A0x2a18a51e19d99f0f!2z5Lit5Zu95paZ55CGIOmmqOaelyBYSU5MSU4!5e0!3m2!1sen!2sjp!4v1691836091272!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
   <div>
