--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body style="background:linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(255,7,7,1) 50%, rgba(252,176,69,1) 100%)">
 <div class="header">
   <a class="button" href="index.html">
+	<a class="serch" href="Veg Logo.png"
   <h1 class="fooddd" id="head">Food For You</h1> </a>
   <!-- Load icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
