--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body style="background:linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(255,7,7,1) 50%, rgba(252,176,69,1) 100%)">
 <div class="header">
-<img class="serch"> href="Veg Logo.png" </img>
+<img class="serch"> href="Veg Logo.png">
   <a class="button" href="index.html">
   <h1 class="fooddd" id="head">Food For You</h1> </a>
   <!-- Load icon library -->
