--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
-<body style="background:linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(255,7,7,1) 50%, rgba(252,176,69,1) 100%)">
+<body style="background:(90deg, rgba(132,180,58,1) 0%, rgba(71,253,29,1) 50%, rgba(69,252,158,1) 100%);">
 <div class="header">
 <img class="serch" style="float: left; height: 50px;" href="Veg_Logo.png">
   <a class="button" href="index.html">
