--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
-<body style="background:(90deg, rgba(132,180,58,1) 0%, rgba(71,253,29,1) 50%, rgba(69,252,158,1) 100%);">
+<body style="background-color: #00b712; background-image: linear-gradient(315deg, #00b712 0%, #5aff15 74%);">
 <div class="header">
 <img class="serch" style="float: left; height: 50px;" href="Veg_Logo.png">
   <a class="button" href="index.html">
