--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <script src="script.js"></script>	
 	
   <br>
-  <h2 class="prebot"> Looking for vegetarian and Jain food in Kobe? This is the perfect website for you!</h2> 
+  <h2 class="prebot"> Looking for Vegetarian and Jain friendly food in Kobe? This is the perfect website for you!</h2> 
   <br>
   <h4 class="prebot">Here you can find all the top rated restaurants of different cuisines. You can either click the Cuisines button on the top to look for restaurants or ask Chef the chatbot! </h4>
   <br>
